Fix padding in first/last article summaries with covers

--- a/styles/components/articleSummary.less
+++ b/styles/components/articleSummary.less
@@ -49,6 +49,14 @@
 	background: @offset;
 	color: #000;
 
+	&:first-child {
+		padding-top: 1rem;
+	}
+
+	&:last-child {
+		padding-bottom: 1rem;
+	}
+
 	.articleSummary__section,
 	.articleSummary__title,
 	.articleSummary__authors {
